[gd_scene load_steps=2 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]

[node name="Test" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Open File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 38.0
margin_top = 62.0
margin_right = 448.0
margin_bottom = 298.0
window_title = "ファイルを開く"
resizable = true
mode = 0
access = 2
current_dir = "Q:/Git/AssimpForGodot/demo"
current_path = "Q:/Git/AssimpForGodot/demo/"
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
